charts/Infrastructure/traefik/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.cameran-lai.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      middlewares:
        - name: authentik
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-cert
